<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/content_background">
     <ScrollView
        android:id="@+id/sv_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        >
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
	        <ImageView 
	            android:layout_marginTop="16dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_launcher"
	            android:contentDescription="@string/hello_world"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:layout_marginTop="8dp"
	            android:textStyle="bold"
	            android:text="@string/app_name"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_marginTop="8dp"
	            android:text="@string/info_version_text"
	            android:textColor="@color/setting_division"/>
	        
	        <!-- 微博 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="@drawable/setting_seletor"
                android:clickable="true" 
                android:id="@+id/ll_info_friend">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/iv_icon_info"
                        android:src="@drawable/icon_info_friend" 
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/rssreader_friend_text"
                        android:textColor="@color/setting_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/setting_division" />
            </LinearLayout>
            
            <!-- 邮箱 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="@drawable/setting_seletor"
                android:clickable="true" 
                android:id="@+id/ll_info_email">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/iv_icon_info"
                        android:src="@drawable/icon_info_email" 
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/info_email_text"
                        android:textColor="@color/setting_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/setting_division" />
            </LinearLayout>
            
            <!-- 主页 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="@drawable/setting_seletor"
                android:clickable="true" 
                android:id="@+id/ll_info_home">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/iv_icon_info"
                        android:src="@drawable/icon_info_home" 
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/www_rssreader_com"
                        android:textColor="@color/setting_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/setting_division" />
            </LinearLayout>
	        
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/rssreader_user_deal_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tab_background"
                ></TextView>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/copyright_2014_2015_rssreader_version_own_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/setting_division"
                ></TextView>
        </LinearLayout>
     </ScrollView>

</LinearLayout>
