<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_background"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/sv_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" 
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

            <!-- 清除缓存 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="@drawable/setting_seletor"
                android:clickable="true" 
                android:id="@+id/ll_delete_cache">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/iv_icon_info"
                        android:src="@drawable/icon_delete_cache" 
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/setting_delete_cache_text"
                        android:textColor="@color/setting_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/setting_division" />
            </LinearLayout>
            <!-- 关于 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:background="@drawable/setting_seletor"
                android:clickable="true"
                android:id="@+id/ll_info"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                   	android:layout_marginTop="8dp"
                   	android:layout_marginLeft="8dp"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/iv_icon_info"
                        android:src="@drawable/icon_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/setting_info_text"
                        android:textColor="@color/setting_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/setting_division"
                    android:contentDescription="@string/tab_home_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>